--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     jsaction="VQAsE" class="cat-ship"
                     style=" height: 270px; width: 280px;" alt="28,300+ Space Cat Stock Illustrations, Royalty-Free Vector Graphics &amp; Clip  Art - iStock | Space cat illustration, Outer space cat, Space cat vector" jsname="kn3ccd" aria-hidden="false">
             <div class="dropdown-message">
-                <p>I lost my ride!</p>
+                <p id="ride">I lost my ride!</p>
              </div>
         
                  
